RESTEasy Reactive: use Jandex annotation overlay